# panpp

./: .gitignore  CMakeLists.txt  README.md  fmd_simple.cpp  fmd_simple.hpp  main.cpp  main_fmd.cpp  main_index.cpp  main_search.cpp  usage.hpp  utils.hpp
data/: small.fa  small.fq  tiny.fa  tiny.fq
example/: tiny.fq
exps/: README.md  compare_sfs.py  run.sh
rlcsa2/: CMakeLists.txt  README.md  fmd.cpp  fmd.h  main.cpp  main_index.cpp  main_search.cpp  main_test.cpp  rlcsa.cpp  rlcsa.h  rlcsa_builder.cpp  rlcsa_builder.h  suffixarray.cpp  suffixarray.h  utils.hpp
rlcsa2/bits/: rlevector.cpp
rlcsa2/misc/: definitions.h  utils.cpp  utils.h
utils/: README.md  check_search.sh  check_search_big.sh  compare_sfs.py
